--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>BY SAID GHEBLAWI</title>
+		<title>Said Gheblawi's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 									<a href="index.html" class="logo"><strong>BY</strong> SAID GHEBLAWI</a>
 									<ul class="icons">
 										<li><a href="https://www.facebook.com/said.gheblawi.5/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="https://www.instagram.com/said_gheblawi/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.instagram.com/said_gheblawi/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://github.com/GheblawiSaid" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
 								</header>
@@ -36,9 +36,9 @@
 										<header>
 											<h1>Hi, I’m Said Gheblawi<br />
 											</h1>
-											<p>A passionate programmer who seeks development (I'm also a photographer)</p>
+											<p>A passionate programmer who seeks achieving the best</p>
 										</header>
-										<p>Hi there! I'm a Computer Science Network and Security Student in UTM, Previous GDSC UTM multimedia leader, web developer, photographer, and social media manager</p>
+										<p>Hi there! I'm a Computer Science Network and Security Student in UTM, Previous GDSC UTM multimedia leader, web developer, photographer, video editor, and social media manager</p>
 										<ul class="actions">
 											<li><a href="https://github.com/GheblawiSaid" class="button big">Learn More</a></li>
 										</ul>
@@ -51,21 +51,35 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Assignments</h2>
+										<h2>Skills</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3>Skills</h3>
-												<p>I'm skilled in web develepments, and the programming languages I used are HTML, PHP, CSS, C++, Javascript</p>
+												<h3>Programming</h3>
+												<p>I'm skilled in web develepments, and the programming languages I used are HTML, PHP, CSS, C++, Javascript, MySQL, and Python.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="icon solid fa-camera"></span>
 											<div class="content">
-												<h3>Future planes</h3>
-												<p>As a stedent and fresh graduate, I plan to actively develop my programming skills day by day, I plan to learn more web application frameworks</p>
+												<h3>Photography</h3>
+												<p>After I took my Photography course, i found that I'm really good at it, so i bought a camera and used it to generate money and support my studies.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-video"></span>
+											<div class="content">
+												<h3>Video editing</h3>
+												<p>I took video editing seriously and now I'm working as a freelancer from companies arround the world.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-brush"></span>
+											<div class="content">
+												<h3>Graphic designer</h3>
+												<p>I also tried to widen my services to graphic designing, so I learned Adobe Photoshop and Adobe Illustrator. </p>
 											</div>
 										</article>
 									</div>
@@ -74,7 +88,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Assignments</h2>
+										<h2>UTM Assignments</h2>
 									</header>
 									<div class="posts">
 										<article>
